project2/minikube/project2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project2-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: client
          image: techhead/react-practice-course-project2:latest
          ports:
            - containerPort: 8080
